--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "ethereumjs-wallet": "^1.0.1",
     "solc": "^0.4.26",
+    "truffle-hdwallet-provider": "^1.0.17",
     "truffle-wallet-provider": "^0.0.5"
   },
   "devDependencies": {
